Updated style for pages and navbar

--- a/app/resources/style/_navbar.scss
+++ b/app/resources/style/_navbar.scss
@@ -78,6 +78,7 @@
                 // Design
                 color: white;
                 text-decoration: none;
+                font-weight: bold;
 
                 // Link on hover
                 &:hover {
