--- a/app/resources/style/mobile/_navbar-m.scss
+++ b/app/resources/style/mobile/_navbar-m.scss
@@ -24,15 +24,15 @@
 
          // Hide nav-toggle container
          .nav-toggle-container-m {
-             padding: 10pt;
+             padding: 8pt;
 
              // Nav toggle button
              .nav-toggle-m {
                  @include faded;
 
                  // Sizing
-                 width: 35px;
-                 height: 35px;
+                 width: 40px;
+                 height: 40px;
 
                  // background
                  background: none;
@@ -42,7 +42,7 @@
                  background-repeat: no-repeat;
 
                  // Border
-                 border: 1px solid white;
+                 border: none;
                  border-radius: 5pt;
 
                  // Active selector
