Created Home component in main.js

--- a/app/resources/style/_page.scss
+++ b/app/resources/style/_page.scss
@@ -38,6 +38,8 @@
         // Coloring
         color: $primary-color;
         text-decoration: none;
+
+        // On hover
         &:hover {
             background-color: $primary-color;
             color: white;
