--- a/app/resources/style/_page.scss
+++ b/app/resources/style/_page.scss
@@ -14,10 +14,15 @@
     // Padding
     padding: 10pt;
 
+    * {
+        margin-bottom: 10pt;
+    }
+
     // Headers
     h1,h2,h3,h4,h5 {
         color: $primary-color;
         margin: 0pt;
+        margin-bottom: 10pt;
     }
 
     // Add underline to h1
@@ -26,6 +31,9 @@
     // Color emphasis
     em { color: $primary-color; }
     strong { color: $primary-color; }
+
+    // Images
+    img { max-width: 100%; }
 
     // Links
     a {
@@ -49,14 +57,26 @@
     // Tables
     table {
         width: 100%;
+        border-bottom: 2pt solid $primary-color;
+        border-spacing: 0;
+        border-collapse: collapse;
 
-        // Handle padding
-        th,td { padding: 5pt; }
+        // Handle padding and mid table borders
+        th,td {
+            margin: 0pt;
+            padding: 5pt;
+            border-right: 2pt solid $primary-color;
+
+            &:last-child {
+                border-right: none;
+            }
+        }
 
         // Header
         th {
             color: $primary-color;
-            border-bottom: 1pt solid $primary-color;
+            border-bottom: 2pt solid $primary-color;
+            font-size: 14pt;
         }
     }
 
@@ -68,7 +88,7 @@
     }
     code {
         background-color: lighten($primary-color, 55%);
-        padding: 2pt;
+        padding: 0pt 4pt;
     }
     pre > code { padding: 0pt; }
 
