--- a/app/resources/style/_jumbotron.scss
+++ b/app/resources/style/_jumbotron.scss
@@ -40,6 +40,8 @@
 
         // Title
         .jt-title {
+            border: none;
+            color: white;
             font-size: 25pt;
             font-weight: bold;
             margin: 0pt;
@@ -47,6 +49,7 @@
 
         // And subtitle
         .jt-subtitle {
+            color: white;
             font-size: 15pt;
             font-weight: normal;
             margin: 0pt;
