--- a/app/resources/style/main.scss
+++ b/app/resources/style/main.scss
@@ -64,7 +64,8 @@ $mobile-width: 500px;
 }
 
 // Imports
-@import "navbar",
+@import "base",
+        "navbar",
         "footer",
         "jumbotron",
         "page",
