--- a/app/resources/style/_page.scss
+++ b/app/resources/style/_page.scss
@@ -6,110 +6,11 @@
  * Author:  Anshul Kharbanda
  * Created: 11 - 24 - 2017
  */
-.page-content {
-    // Padding
-    font-family: $main-font;
-    font-size: 12pt;
-
-    // Padding
-    padding: 10pt;
-
-    * {
-        margin-bottom: 10pt;
-    }
-
-    // Headers
-    h1,h2,h3,h4,h5 {
-        color: $primary-color;
-        margin: 0pt;
-        margin-bottom: 10pt;
-    }
-
-    // Add underline to h1
-    h1 { border-bottom: 1pt solid $primary-color; }
-
-    // Color emphasis
-    em { color: $primary-color; }
-    strong { color: $primary-color; }
-
-    // Images
-    img { max-width: 100%; }
-
-    // Links
-    a {
-        @include faded;
-
-        // Font and sizing
-        padding: 5pt;
-        font-weight: bold;
-
-        // Coloring
-        color: $primary-color;
-        text-decoration: none;
-
-        // On hover
-        &:hover {
-            background-color: $primary-color;
-            color: white;
-        }
-    }
-
-    // Tables
-    table {
-        width: 100%;
-        border-bottom: 2pt solid $primary-color;
-        border-spacing: 0;
-        border-collapse: collapse;
-
-        // Handle padding and mid table borders
-        th,td {
-            margin: 0pt;
-            padding: 5pt;
-            border-right: 2pt solid $primary-color;
-
-            &:last-child {
-                border-right: none;
-            }
-        }
-
-        // Header
-        th {
-            color: $primary-color;
-            border-bottom: 2pt solid $primary-color;
-            font-size: 14pt;
-        }
-    }
-
-    // Code segments
-    pre {
-        padding: 10pt 10pt;
-        background-color: lighten($primary-color, 55%);
-        border-radius: 2pt;
-    }
-    code {
-        background-color: lighten($primary-color, 55%);
-        padding: 0pt 4pt;
-    }
-    pre > code { padding: 0pt; }
-
-    // Blockquote
-    blockquote {
-        // Spacing
-        margin: 10pt 0pt 10pt 30pt;
-        padding: 0pt 10pt;
-
-        // Side border
-        border-left: 2pt solid $primary-color;
-
-        // Text handling
-        text-align: justify;
-        font-size: 14pt;
-
-        // Blockquote within blockquote
-        blockquote {
-            // Spacing
-            margin: 10pt 0pt;
-            padding: 0pt 10pt;
-        }
+.page {
+    .page-content {
+        // Padding
+        padding: 10pt;
+        // Margin of components
+        * { margin-bottom: 10pt; }
     }
 }
