Moved mobile styling for jumbotron to one scss

--- a/app/resources/style/main.scss
+++ b/app/resources/style/main.scss
@@ -65,5 +65,4 @@ $mobile-width: 500px;
         "footer",
         "jumbotron",
         "page",
-        "gallery",
-        "mobile/jumbotron-m";
+        "gallery";
