--- a/app/resources/style/_jumbotron.scss
+++ b/app/resources/style/_jumbotron.scss
@@ -55,10 +55,13 @@
             margin: 0pt;
         }
     }
-}
 
-// Mobile jumbotron
-.jumbotron-m {
-    @extend .jumbotron;
-    height: 200pt;
+    // Mobile jumbotron
+    @include on-mobile {
+        height: 180pt;
+        .jt-container {
+            .jt-title { font-size: 20pt; }
+            .jt-subtitle { font-size: 14pt; }
+        }
+    }
 }
