--- a/app/resources/style/_navbar.scss
+++ b/app/resources/style/_navbar.scss
@@ -7,20 +7,9 @@
  * Created: 11 - 24 - 2017
  */
 
-// Nav-toggle animation
-@keyframes grow {
-    from { height: 0pt; }
-    to { height: auto; }
-}
-
-@keyframes shrink {
-    from { height: auto; }
-    to { height: 0pt; }
-}
-
 // Main navbar
 .navbar {
-    @include row-group;
+    @include responsive-row-group;
 
     // Font
     font-family: $main-font;
@@ -56,38 +45,78 @@
                 background-color: white;
                 color: $primary-color;
             }
+
+            // Grow on mobile
+            @include on-mobile { flex-grow: 1; };
         }
 
+        // Nav toggle container
         .nav-toggle-container {
-            display: none;
+            @include visible-on-mobile(block);
+            padding: 8pt;
 
+            // Nav toggle button
+            .nav-toggle {
+                @include faded;
+
+                // Sizing
+                width: 40px;
+                height: 40px;
+
+                // background
+                background: none;
+                background-image: url('../icons/menu.svg');
+                background-size: 70%;
+                background-position: center;
+                background-repeat: no-repeat;
+
+                // Border
+                border: none;
+                border-radius: 5pt;
+
+                // Active selector
+                &.active {
+                    background-color: white;
+                    background-image: url('../icons/menu-selected.svg');
+                }
+            }
         }
     }
 
     // Navigation links
     .nav-link-set {
         flex-grow: 1;
-        @include row-group;
+        @include responsive-row-group;
+        @include faded;
 
         // Remove list settings
         list-style: none;
         margin: 0;
         padding: 0pt;
 
+        // Animate drop-down on mobile
+        @include on-mobile {
+            max-height: 0px;
+            &.active { max-height: 120px; }
+        };
+
         // Single link item
         .nav-link {
             flex-grow: 1;
-            @include col-group;
+            @include responsive-col-group;
 
             // Link thing
             a {
                 @include col-group;
                 @include faded;
 
-                // Sizing and alignment
+                // Sizing
                 flex-grow: 1;
-                text-align: center;
                 padding: 10pt;
+
+                // Responsive alignment
+                text-align: center;
+                @include on-mobile { text-align: right; };
 
                 // Design
                 color: white;
@@ -103,63 +132,4 @@
             }
         }
     }
-
-    // On mobile
-    @include on-mobile {
-        display: block;
-
-        // Header
-        .nav-header {
-            // Title
-            .nav-title { flex-grow: 1; }
-
-            // Nav toggle container
-            .nav-toggle-container {
-                @include block-group;
-                padding: 8pt;
-
-                // Nav toggle button
-                .nav-toggle {
-                    @include faded;
-
-                    // Sizing
-                    width: 40px;
-                    height: 40px;
-
-                    // background
-                    background: none;
-                    background-image: url('../icons/menu.svg');
-                    background-size: 70%;
-                    background-position: center;
-                    background-repeat: no-repeat;
-
-                    // Border
-                    border: none;
-                    border-radius: 5pt;
-
-                    // Active selector
-                    &.active {
-                        background-color: white;
-                        background-image: url('../icons/menu-selected.svg');
-                    }
-                }
-            }
-        }
-
-        // Navigation links
-        .nav-link-set {
-            @include block-group;
-            @include faded;
-            max-height: 0px;
-
-            // Active state
-            &.active { max-height: 120px; }
-
-            // Single link item
-            .nav-link {
-                @include block-group;
-                a { text-align: right; }
-            }
-        }
-    };
 }
